--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,5 @@
 .fold { height: 32px; text-align: center; padding: 10px; }
 .fold .more { display: block; }
 .fold form { display: none; }
+#dict-dynamics { height: 400px; }
+#dict-zipf { height: 400px; margin: 40px 0; }
